--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,16 @@
-*.egg-info
-*.pyc
-*.pyo
 .DS_Store
-.coverage
 .idea
-__pycache__
-build
-dist
-docs/_build
+.vscode
+awesome-colour/
+colour/
+colour-demosaicing/
+colour-hdri/
+colour-checker-detection/
+colour-datasets/
+colour-visuals/
+colour-dash/
+colour-science.org/
+colour-branding/
+colour-mitsuba/
+colour-nuke/
+colour-webhook/
