--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,10 +8,10 @@
         8888
     ],
     "containerEnv": {
-        "COLOUR_SCIENCE__ROOT_DIRECTORY": "/workspaces/colour.devcontainer",
+        "COLOUR_SCIENCE__ROOT_DIRECTORY": "/workspaces/colour-science.devcontainer",
         "COLOUR_SCIENCE__ACTIVE_PROJECTS": "colour:colour-hdri"
     },
-    "postCreateCommand": "ansible-playbook -vvv --connection=local --inventory 127.0.0.1, /workspaces/colour.devcontainer/colour-science-ansible/ansible/site.yml",
+    "postCreateCommand": "ansible-playbook -vvv --connection=local --inventory 127.0.0.1, $COLOUR_SCIENCE__ROOT_DIRECTORY/colour-science-ansible/ansible/site.yml && source ~/.bashrc",
     "extensions": [
         "ms-python.python"
     ]
