--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ ENV TZ=Etc/UTC
 ARG DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get -y update \
-    && apt -y install software-properties-common \
+    && apt-get -y install software-properties-common \
     && add-apt-repository -y --update ppa:ansible/ansible \
     && apt-get -y install ansible \
     && apt-get autoremove -y \
