--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -8,6 +8,6 @@ ARG DEBIAN_FRONTEND=noninteractive
 RUN apt-get -y update \
     && apt-get -y install software-properties-common \
     && add-apt-repository -y --update ppa:ansible/ansible \
-    && apt-get -y install ansible \
+    && apt-get -y install curl ansible \
     && apt-get autoremove -y \
     && apt-get clean -y
